Rearrange annotations
- adjust response type for post and delete
- replace constructor with builder